--- a/melior/Cargo.toml
+++ b/melior/Cargo.toml
@@ -14,7 +14,7 @@ ods-dialects = []
 [dependencies]
 dashmap = "5.5.3"
 melior-macro = { version = "0.10", path = "../macro" }
-mlir-sys = "0.2"
+mlir-sys = { git = "https://github.com/Tiggilyboo/mlir-sys", branch = "llvm18" }
 once_cell = "1"
 
 [dev-dependencies]
