--- a/melior/Cargo.toml
+++ b/melior/Cargo.toml
@@ -12,10 +12,8 @@ keywords = ["mlir", "llvm"]
 ods-dialects = []
 
 [dependencies]
-dashmap = "5.5.3"
-melior-macro = { version = "0.10", path = "../macro" }
-mlir-sys = { git = "https://github.com/Tiggilyboo/mlir-sys", branch = "llvm18" }
-once_cell = "1"
+melior-macro = { path = "../macro", default-features = false }
+mlir-sys = { path = "../../mlir-sys", default-features = false }
 
 [dev-dependencies]
 indoc = "2.0.4"
