--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -13,17 +13,16 @@ keywords = ["mlir", "llvm"]
 proc-macro = true
 
 [dependencies]
-comrak = "0.21.0"
-convert_case = "0.6.0"
-once_cell = "1.19.0"
-proc-macro2 = "1"
-quote = "1"
-regex = "1.10.3"
+comrak = { version = "0.21", default-features = false }
+convert_case = { version = "0.6.0", default-features = false }
+proc-macro2 = { version = "1", default-features = false }
+quote = { version = "1", default-features = false }
+regex = { version = "1.10.3", default-features = false }
 syn = { version = "2", features = ["full"] }
+unindent = { version = "0.2.3", default-features = false }
 tblgen = { path = "../../tblgen-rs", features = ["llvm18-0"], default-features = false }
-unindent = "0.2.3"
 
 [dev-dependencies]
 melior = { path = "../melior", features = ["ods-dialects"] }
-mlir-sys = { path = "../../mlir-sys" }
+mlir-sys = { path = "../../mlir-sys", default-features = false }
 pretty_assertions = "1.4.0"
